--- a/reg.html
+++ b/reg.html
@@ -21,6 +21,22 @@
             </div>
         </div>
     </header>
-    
+    <form id="login">
+        <div class="input">
+            <label for="name">Логин</label>
+            <input type="text" name="name"><br>            
+        </div>
+        <div class="input">
+            <label for="pass">Пароль</label>
+            <input type="pass" name="pass"><br>            
+        </div>
+        <div class="submit">
+            <input type="submit" id="signup" value="Зарегистрироваться">
+            <input type="submit" id="signin" value="Войти">            
+        </div>
+
+    </form>
+
+    <script src="app.js"></script>
 </body>
 </html>
