signin/signup (krivo)

--- a/index.html
+++ b/index.html
@@ -11,16 +11,29 @@
         <img style="width: 200px;" src="logo.png" alt="">
         <div class="menu">
             <div class="menu_btn">
-                <p></p><a href="">Магазин</a>
+                <p></p><a href="index.html">Магазин</a>
             </div>
             <div class="menu_btn">
                 <p></p><a href="">Корзина</a>
             </div>
-            <div class="menu_btn">
+            <div class="menu_btn" id="menuBtn">
                 <p></p><a href="reg.html">Войти</a>
             </div>
         </div>
     </header>
-    
+    <main>
+        <div class="section">
+            <a href=""><img class="open" src="open.png" alt=""></a>
+            <p>Xbox</p>
+        </div>
+        <div class="section">
+            <a href=""><img class="open" src="open.png" alt=""></a>
+            <p>PlayStation</p>
+        </div>
+        <div class="section">
+            <a href=""><img class="open" src="open.png" alt=""></a>
+            <p>Nintendo</p>
+        </div>
+    </main>
 </body>
 </html>
