--- a/reg.html
+++ b/reg.html
@@ -11,7 +11,7 @@
         <img style="width: 200px;" src="logo.png" alt="">
         <div class="menu">
             <div class="menu_btn">
-                <p></p><a href="">Магазин</a>
+                <p></p><a href="index.html">Магазин</a>
             </div>
             <div class="menu_btn">
                 <p></p><a href="">Корзина</a>
@@ -32,9 +32,9 @@
         </div>
         <div class="submit">
             <input type="submit" id="signup" value="Зарегистрироваться">
-            <input type="submit" id="signin" value="Войти">            
+            <input type="submit" id="signin" value="Войти">
         </div>
-
+        <div class="login_error"><p>Такой пользователь уже зарегестрирован</p></div>
     </form>
 
     <script src="app.js"></script>
