--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img style="width: 200px;" src="logo.png" alt="">
+        <img style="width: 12%;" src="logo.png" alt="">
         <div class="menu">
             <div class="menu_btn">
                 <p></p><a href="index.html">Магазин</a>
@@ -22,18 +22,49 @@
         </div>
     </header>
     <main>
-        <div class="section">
-            <a href=""><img class="open" src="open.png" alt=""></a>
-            <p>Xbox</p>
-        </div>
-        <div class="section">
-            <a href=""><img class="open" src="open.png" alt=""></a>
-            <p>PlayStation</p>
-        </div>
-        <div class="section">
-            <a href=""><img class="open" src="open.png" alt=""></a>
-            <p>Nintendo</p>
-        </div>
+        <section>
+            <div class="section_head border_rad_full">
+                <a href="#"><img class="open" src="open.png" alt=""></a>
+                <p>Xbox</p>
+            </div>
+            <div class="section none">
+                <div class="tile">
+                     <p class="tile_text">Xbox Series X</p>
+                     <img class="tile_image" src="xbox-x.jpg" alt="">
+                     <p class="tile_text">699$</p>
+                     <p class="buyBtn tile_text">В корзину</p>
+                </div>
+            </div>        
+        </section>
+        <section>
+            <div class="section_head border_rad_full">
+                <a href="#"><img class="open" src="open.png" alt=""> </a>
+                <p>PlayStation</p>
+            </div>                
+            <div class="section none">
+                <div class="tile">
+                     <p class="tile_text">PlayStation 5</p>
+                     <img class="tile_image" src="" alt="">
+                     <p class="tile_text">699$</p>
+                     <p class="buyBtn tile_text">В корзину</p>
+                </div>
+            </div>           
+        </section>
+        <section>
+            <div class="section_head border_rad_full">
+                <a href="#"><img class="open" src="open.png" alt=""></a>
+                <p>Nintendo</p>
+            </div>         
+            <div class="section none">
+                <div class="tile">
+                     <p class="tile_text">Nintendo Switch 2</p>
+                     <img class="tile_image" src="" alt="">
+                     <p class="tile_text">500$</p>
+                     <p class="buyBtn tile_text">В корзину</p>
+                </div>
+            </div>      
+        </section>
     </main>
+    <script src="app.js"></script>
 </body>
 </html>
