--- a/reg.html
+++ b/reg.html
@@ -30,8 +30,10 @@
             <label for="pass">Пароль</label>
             <input type="pass" name="pass"><br>            
         </div>
-        <div class="submit">
+        <div class="submit input">
             <input type="submit" id="signup" value="Зарегистрироваться">
+        </div>
+        <div class="submit input">
             <input type="submit" id="signin" value="Войти">
         </div>
         <div class="login_error"><p>Такой пользователь уже зарегестрирован</p></div>
