--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
         <img style="width: 12%;" src="logo.png" alt="">
         <div class="menu">
             <div class="menu_btn">
-                <p></p><a href="index.html">Магазин</a>
-            </div>
-            <div class="menu_btn">
-                <p></p><a href="">Корзина</a>
-            </div>
-            <div class="menu_btn">
                 <div>
                     <p></p><a href="#" id="signinBtn">Войти</a>  
                     <form id="login" class="none">
@@ -50,9 +44,27 @@
             <div class="section none">
                 <div class="tile">
                      <p class="tile_text">Xbox Series X</p>
-                     <img class="tile_image" src="xbox-x.jpg" alt="">
+                     <img class="tile_image" src="images/xbox/xbox-s-x.png" alt="">
                      <p class="tile_text">699$</p>
-                     <p class="buyBtn tile_text">В корзину</p>
+                     <p class="buyBtn tile_text">Купить</p>
+                </div>
+                <div class="tile">
+                     <p class="tile_text">Xbox Series S</p>
+                     <img class="tile_image" src="images/xbox/xbox-s-s.png" alt="">
+                     <p class="tile_text">449$</p>
+                     <p class="buyBtn tile_text">Купить</p>
+                </div>
+                <div class="tile">
+                     <p class="tile_text">Xbox One X</p>
+                     <img class="tile_image" src="images/xbox/xbox-one-x.png" alt="">
+                     <p class="tile_text">199$</p>
+                     <p class="buyBtn tile_text">Купить</p>
+                </div>
+                <div class="tile">
+                     <p class="tile_text">Xbox One S</p>
+                     <img class="tile_image" src="images/xbox/xbox-one-s.png" alt="">
+                     <p class="tile_text">149$</p>
+                     <p class="buyBtn tile_text">Купить</p>
                 </div>
             </div>        
         </section>
@@ -64,9 +76,27 @@
             <div class="section none">
                 <div class="tile">
                      <p class="tile_text">PlayStation 5</p>
-                     <img class="tile_image" src="" alt="">
+                     <img class="tile_image" src="images/playstation/ps5.png" alt="">
+                     <p class="tile_text">549$</p>
+                     <p class="buyBtn tile_text">Купить</p>
+                </div>
+                <div class="tile">
+                     <p class="tile_text">PlayStation 5 Pro</p>
+                     <img class="tile_image" src="images/playstation/ps5pro.png" alt="">
                      <p class="tile_text">699$</p>
-                     <p class="buyBtn tile_text">В корзину</p>
+                     <p class="buyBtn tile_text">Купить</p>
+                </div>
+                <div class="tile">
+                     <p class="tile_text">PlayStation 4</p>
+                     <img class="tile_image" src="images/playstation/ps4.png" alt="">
+                     <p class="tile_text">149$</p>
+                     <p class="buyBtn tile_text">Купить</p>
+                </div>
+                <div class="tile">
+                     <p class="tile_text">PlayStation 4 Pro</p>
+                     <img class="tile_image" src="images/playstation/ps4pro.png" alt="">
+                     <p class="tile_text">179$</p>
+                     <p class="buyBtn tile_text">Купить</p>
                 </div>
             </div>           
         </section>
@@ -78,9 +108,27 @@
             <div class="section none">
                 <div class="tile">
                      <p class="tile_text">Nintendo Switch 2</p>
-                     <img class="tile_image" src="" alt="">
-                     <p class="tile_text">500$</p>
-                     <p class="buyBtn tile_text">В корзину</p>
+                     <img class="tile_image" src="images/nintendo/2.png" alt="">
+                     <p class="tile_text">449$</p>
+                     <p class="buyBtn tile_text">Купить</p>
+                </div>
+                <div class="tile">
+                     <p class="tile_text">Nintendo Switch Oled</p>
+                     <img class="tile_image" src="images/nintendo/oled.png" alt="">
+                     <p class="tile_text">349$</p>
+                     <p class="buyBtn tile_text">Купить</p>
+                </div>
+                <div class="tile">
+                     <p class="tile_text">Nintendo Switch rev.2</p>
+                     <img class="tile_image" src="images/nintendo/2rev.png" alt="">
+                     <p class="tile_text">299$</p>
+                     <p class="buyBtn tile_text">Купить</p>
+                </div>
+                <div class="tile">
+                     <p class="tile_text">Nintendo Switch Lite</p>
+                     <img class="tile_image" src="images/nintendo/lite.png" alt="">
+                     <p class="tile_text">199$</p>
+                     <p class="buyBtn tile_text">Купить</p>
                 </div>
             </div>      
         </section>
