--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
                     </form>                                      
                 </div>
             </div>
-            </div>
         </div>
     </header>
     <main>
@@ -47,25 +46,25 @@
                      <p class="tile_text">Xbox Series X</p>
                      <img class="tile_image" src="images/xbox/xbox-s-x.png" alt="">
                      <p class="tile_text">699$</p>
-                     <p class="buyBtn tile_text">Купить</p>
+                     <p class="buy_btn tile_text">Купить</p>
                 </div>
                 <div class="tile">
                      <p class="tile_text">Xbox Series S</p>
                      <img class="tile_image" src="images/xbox/xbox-s-s.png" alt="">
                      <p class="tile_text">449$</p>
-                     <p class="buyBtn tile_text">Купить</p>
+                     <p class="buy_btn tile_text">Купить</p>
                 </div>
                 <div class="tile">
                      <p class="tile_text">Xbox One X</p>
                      <img class="tile_image" src="images/xbox/xbox-one-x.png" alt="">
                      <p class="tile_text">199$</p>
-                     <p class="buyBtn tile_text">Купить</p>
+                     <p class="buy_btn tile_text">Купить</p>
                 </div>
                 <div class="tile">
                      <p class="tile_text">Xbox One S</p>
                      <img class="tile_image" src="images/xbox/xbox-one-s.png" alt="">
                      <p class="tile_text">149$</p>
-                     <p class="buyBtn tile_text">Купить</p>
+                     <p class="buy_btn tile_text">Купить</p>
                 </div>
             </div>        
         </section>
@@ -79,25 +78,25 @@
                      <p class="tile_text">PlayStation 5</p>
                      <img class="tile_image" src="images/playstation/ps5.png" alt="">
                      <p class="tile_text">549$</p>
-                     <p class="buyBtn tile_text">Купить</p>
+                     <p class="buy_btn tile_text">Купить</p>
                 </div>
                 <div class="tile">
                      <p class="tile_text">PlayStation 5 Pro</p>
                      <img class="tile_image" src="images/playstation/ps5pro.png" alt="">
                      <p class="tile_text">699$</p>
-                     <p class="buyBtn tile_text">Купить</p>
+                     <p class="buy_btn tile_text">Купить</p>
                 </div>
                 <div class="tile">
                      <p class="tile_text">PlayStation 4</p>
                      <img class="tile_image" src="images/playstation/ps4.png" alt="">
                      <p class="tile_text">149$</p>
-                     <p class="buyBtn tile_text">Купить</p>
+                     <p class="buy_btn tile_text">Купить</p>
                 </div>
                 <div class="tile">
                      <p class="tile_text">PlayStation 4 Pro</p>
                      <img class="tile_image" src="images/playstation/ps4pro.png" alt="">
                      <p class="tile_text">179$</p>
-                     <p class="buyBtn tile_text">Купить</p>
+                     <p class="buy_btn tile_text">Купить</p>
                 </div>
             </div>           
         </section>
@@ -111,25 +110,25 @@
                      <p class="tile_text">Nintendo Switch 2</p>
                      <img class="tile_image" src="images/nintendo/2.png" alt="">
                      <p class="tile_text">449$</p>
-                     <p class="buyBtn tile_text">Купить</p>
+                     <p class="buy_btn tile_text">Купить</p>
                 </div>
                 <div class="tile">
                      <p class="tile_text">Nintendo Switch Oled</p>
                      <img class="tile_image" src="images/nintendo/oled.png" alt="">
                      <p class="tile_text">349$</p>
-                     <p class="buyBtn tile_text">Купить</p>
+                     <p class="buy_btn tile_text">Купить</p>
                 </div>
                 <div class="tile">
                      <p class="tile_text">Nintendo Switch rev.2</p>
                      <img class="tile_image" src="images/nintendo/2rev.png" alt="">
                      <p class="tile_text">299$</p>
-                     <p class="buyBtn tile_text">Купить</p>
+                     <p class="buy_btn tile_text">Купить</p>
                 </div>
                 <div class="tile">
                      <p class="tile_text">Nintendo Switch Lite</p>
                      <img class="tile_image" src="images/nintendo/lite.png" alt="">
                      <p class="tile_text">199$</p>
-                     <p class="buyBtn tile_text">Купить</p>
+                     <p class="buy_btn tile_text">Купить</p>
                 </div>
             </div>      
         </section>
