--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="menu_btn">
                 <div>
                     <p></p><a href="#" id="signinBtn">Войти</a>  
-                    <form id="login" class="none">
+                    <form id="login" class="none formm">
                         <div class="input">
                             <label for="name">Логин</label>
                             <input type="text" name="name"><br>            
@@ -43,28 +43,28 @@
             </div>
             <div class="section none">
                 <div class="tile">
-                     <p class="tile_text">Xbox Series X</p>
+                     <p class="tile_text CName">Xbox Series X</p>
                      <img class="tile_image" src="images/xbox/xbox-s-x.png" alt="">
                      <p class="tile_text">699$</p>
-                     <p class="buy_btn tile_text">Купить</p>
+                     <a href="#"><p class="buy_btn tile_text">Купить</p></a>
                 </div>
                 <div class="tile">
-                     <p class="tile_text">Xbox Series S</p>
+                     <p class="tile_text CName">Xbox Series S</p>
                      <img class="tile_image" src="images/xbox/xbox-s-s.png" alt="">
                      <p class="tile_text">449$</p>
-                     <p class="buy_btn tile_text">Купить</p>
+                     <a href="#"><p class="buy_btn tile_text">Купить</p></a>
                 </div>
                 <div class="tile">
-                     <p class="tile_text">Xbox One X</p>
+                     <p class="tile_text CName">Xbox One X</p>
                      <img class="tile_image" src="images/xbox/xbox-one-x.png" alt="">
                      <p class="tile_text">199$</p>
-                     <p class="buy_btn tile_text">Купить</p>
+                     <a href="#"><p class="buy_btn tile_text">Купить</p></a>
                 </div>
                 <div class="tile">
-                     <p class="tile_text">Xbox One S</p>
+                     <p class="tile_text CName">Xbox One S</p>
                      <img class="tile_image" src="images/xbox/xbox-one-s.png" alt="">
                      <p class="tile_text">149$</p>
-                     <p class="buy_btn tile_text">Купить</p>
+                     <a href="#"><p class="buy_btn tile_text">Купить</p></a>
                 </div>
             </div>        
         </section>
@@ -75,28 +75,28 @@
             </div>                
             <div class="section none">
                 <div class="tile">
-                     <p class="tile_text">PlayStation 5</p>
+                     <p class="tile_text CName">PlayStation 5</p>
                      <img class="tile_image" src="images/playstation/ps5.png" alt="">
                      <p class="tile_text">549$</p>
-                     <p class="buy_btn tile_text">Купить</p>
+                     <a href="#"><p class="buy_btn tile_text">Купить</p></a>
                 </div>
                 <div class="tile">
-                     <p class="tile_text">PlayStation 5 Pro</p>
+                     <p class="tile_text CName">PlayStation 5 Pro</p>
                      <img class="tile_image" src="images/playstation/ps5pro.png" alt="">
                      <p class="tile_text">699$</p>
-                     <p class="buy_btn tile_text">Купить</p>
+                     <a href="#"><p class="buy_btn tile_text">Купить</p></a>
                 </div>
                 <div class="tile">
-                     <p class="tile_text">PlayStation 4</p>
+                     <p class="tile_text CName">PlayStation 4</p>
                      <img class="tile_image" src="images/playstation/ps4.png" alt="">
                      <p class="tile_text">149$</p>
-                     <p class="buy_btn tile_text">Купить</p>
+                     <a href="#"><p class="buy_btn tile_text">Купить</p></a>
                 </div>
                 <div class="tile">
-                     <p class="tile_text">PlayStation 4 Pro</p>
+                     <p class="tile_text CName">PlayStation 4 Pro</p>
                      <img class="tile_image" src="images/playstation/ps4pro.png" alt="">
                      <p class="tile_text">179$</p>
-                     <p class="buy_btn tile_text">Купить</p>
+                     <a href="#"><p class="buy_btn tile_text">Купить</p></a>
                 </div>
             </div>           
         </section>
@@ -107,32 +107,56 @@
             </div>         
             <div class="section none">
                 <div class="tile">
-                     <p class="tile_text">Nintendo Switch 2</p>
+                     <p class="tile_text CName">Nintendo Switch 2</p>
                      <img class="tile_image" src="images/nintendo/2.png" alt="">
                      <p class="tile_text">449$</p>
-                     <p class="buy_btn tile_text">Купить</p>
+                     <a href="#"><p class="buy_btn tile_text">Купить</p></a>
                 </div>
                 <div class="tile">
-                     <p class="tile_text">Nintendo Switch Oled</p>
+                     <p class="tile_text CName">Nintendo Switch Oled</p>
                      <img class="tile_image" src="images/nintendo/oled.png" alt="">
                      <p class="tile_text">349$</p>
-                     <p class="buy_btn tile_text">Купить</p>
+                     <a href="#"><p class="buy_btn tile_text">Купить</p></a>
                 </div>
                 <div class="tile">
-                     <p class="tile_text">Nintendo Switch rev.2</p>
+                     <p class="tile_text CName">Nintendo Switch rev.2</p>
                      <img class="tile_image" src="images/nintendo/2rev.png" alt="">
                      <p class="tile_text">299$</p>
-                     <p class="buy_btn tile_text">Купить</p>
+                     <a href="#"><p class="buy_btn tile_text">Купить</p></a>
                 </div>
                 <div class="tile">
-                     <p class="tile_text">Nintendo Switch Lite</p>
+                     <p class="tile_text CName">Nintendo Switch Lite</p>
                      <img class="tile_image" src="images/nintendo/lite.png" alt="">
                      <p class="tile_text">199$</p>
-                     <p class="buy_btn tile_text">Купить</p>
+                     <a href="#"><p class="buy_btn tile_text">Купить</p></a>
                 </div>
             </div>      
         </section>
+        <div class="delivery none">
+            <h2>Оформление заказа</h2>
+            <a href="#"><img src="images/cross.png" class="form_cross" alt=""></a>
+            <form action="" class="delivery_form">
+                <div class="form_elem">
+                    <label class="form_text" for="address">Адрес</label>
+                    <input class="form_input" type="text" name="address" required>                    
+                </div>
+                <div class="form_elem">
+                    <label class="form_text" for="surname">ФИО получателя</label>
+                    <input class="form_input" type="text" name="surname" required>    
+                </div>
+                <div class="form_elem">
+                    <label class="form_text" for="mail">Email дял связи</label>
+                    <input class="form_input" type="text" name="mail" required>                    
+                </div>
+                <div class="form_elem">
+                    <p class="form_text">Название консоли</p>
+                    <p class="form_input"><span></span></p>
+                </div>
+                <input class="form_submit" type="submit" value="Создать заказ">
+            </form>
+        </div>
     </main>
+    <script src="order.js" defer></script>    
     <script src="app.js" defer></script>
     <script src="reg.js" defer></script>
 </body>
