--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
             </form>
         </div>
     </main>
+    <footer>
+        © 2026 Yaroslav Velker
+    </footer>
     <script src="order.js" defer></script>    
     <script src="app.js" defer></script>
     <script src="reg.js" defer></script>
